Service-Requirements/EKS-016/ingress-2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
     alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect","RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/group.name: dev-apps
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-path: /analytics/api/health
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/rewrite-target: /$1
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    kubernetes.io/ingress.class: alb
  name: <SERVICE_NAME>
  namespace: dev
spec:
  ingressClassName: alb
  rules:
  - host: dev-sheeple.avellinoconsulting.app
    http:
      paths:
      - backend:
          service:
            name: <SERVICE_NAME>
            port:
              number: 5008
        path: /analytics/api
        pathType: Prefix
