Service-Requirements/EKS-016/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-nginx@kubernetescrd
  name: microservice-1
  namespace: dev
spec:
  ingressClassName: microservice-1
  rules:
  - http:
      paths:
      - backend:
          service:
            name: microservice-1
            port:
              number: 80
        path: /api/v1
        pathType: Prefix
status:
  loadBalancer: {}
